--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -47,42 +47,38 @@
         <title>Medicine Tracker</title>
     </head>
     <body>
-        <!-- <div class="app">
-            <h1>Medicine Tracker</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div> -->
-        <div data-role="page" id="home">
-            <div data-role="navbar">
-                <ul>
-                  <li><a href="#" class="ui-btn-active">Patients</a></li>
-                  <li><a href="#">Events</a></li>
-                  <li><a href="#">Medicine</a></li>
-                  <li><a href="#">Report</a></li>
-                </ul>
-            </div>
-            <div data-role="header">
+
+        <div data-role="page" id="patients">
+            <div data-role="header" data-position="fixed">
+                <div data-role="navbar">
+                    <ul>
+                      <li><a href="#patients" class="ui-btn-active ui-state-persist">Patients</a></li>
+                      <li><a href="#events">Events</a></li>
+                      <li><a href="#">Medicine</a></li>
+                      <li><a href="#">Report</a></li>
+                    </ul>
+                </div>
                 <h1>Patients</h1>
             </div>
             <div role="main" class="ui-content">
                 <div class="example-wrapper">
-                    <ul data-role="listview" id="patient-list" data-inset="true"></ul>
+                    <ul data-role="listview" id="patient-list" data-inset="true" data-filter="true"></ul>
                 </div>
             </div>
-            <div data-role="footer">
+            <div data-role="footer" data-position="fixed">
                 <h1>Copyright 2017</h1>
             </div>
         </div>
+
         <div data-role="page" id="events">
-            <div data-role="header">
-                <a href="#home" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
+            <div data-role="header" data-position="fixed">
+                <a href="#patients" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>Events</h1>
             </div>
             <div data-role="content">
                 <ul data-role="listview" id="event-list" data-theme="a"></ul>
             </div>
         </div>
+
     </body>
 </html>
