--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -43,8 +43,9 @@
         <script type="text/javascript" src="lib/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/storage.js"></script>
+        <script type="text/javascript" src="js/ajaxHelper.js"></script>
         <script type="text/javascript" src="js/tools.js"></script>
-        <script type="text/javascript" src="js/eventbindings.js"></script>
+        <script type="text/javascript" src="js/eventBindings.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <title>Medicine Tracker</title>
     </head>
