Changed object names.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -42,9 +42,10 @@
         <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="lib/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/storage.js"></script>
+        <script type="text/javascript" src="js/state.js"></script>
         <script type="text/javascript" src="js/ajaxHelper.js"></script>
         <script type="text/javascript" src="js/tools.js"></script>
+        <script type="text/javascript" src="js/patients.js"></script>
         <script type="text/javascript" src="js/eventBindings.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <title>Medicine Tracker</title>
