Added edit patient button.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -97,6 +97,8 @@
                 </div>
             </div>
             <div data-role="content">
+                <div class="content-holder"></div>
+                <a href="#edit-patient" class="ui-btn ui-corner-all">Edit Patient</a>
             </div>
         </div>
 
