--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -46,6 +46,7 @@
         <script type="text/javascript" src="js/ajaxHelper.js"></script>
         <script type="text/javascript" src="js/tools.js"></script>
         <script type="text/javascript" src="js/medicines.js"></script>
+        <script type="text/javascript" src="js/events.js"></script>
         <script type="text/javascript" src="js/patients.js"></script>
         <script type="text/javascript" src="js/eventBindings.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
@@ -109,7 +110,19 @@
                 <h1>Events</h1>
             </div>
             <div data-role="content">
-                <ul data-role="listview" id="event-list" data-theme="a"></ul>
+                <ul data-role="listview" id="event-list" data-inset="true" data-filter="true"></ul>
+                <a href="#edit-event" class="ui-btn ui-corner-all">Add Event</a>
+            </div>
+        </div>
+
+        <div data-role="page" id="view-event">
+            <div data-role="header" data-position="fixed">
+                <a href="#view-patient" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
+                <h1>View Event</h1>
+            </div>
+            <div data-role="content">
+                <div class="content-holder"></div>
+                <a href="#" class="ui-btn ui-corner-all">Edit Event</a>
             </div>
         </div>
 
