Updated patients list.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -117,7 +117,7 @@
 
         <div data-role="page" id="view-event">
             <div data-role="header" data-position="fixed">
-                <a href="#view-patient" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
+                <a href="#events" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Event</h1>
             </div>
             <div data-role="content">
@@ -139,7 +139,7 @@
 
         <div data-role="page" id="view-medicine">
             <div data-role="header" data-position="fixed">
-                <a href="#view-patient" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
+                <a href="#medicines" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Medicine</h1>
             </div>
             <div data-role="content">
