--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -39,11 +39,11 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.5.css">
-        <link rel="stylesheet" type="text/css" "lib/vis/dist/vis.css">
+        <link rel="stylesheet" type="text/css" href="css/vis.css">
         <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="lib/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="lib/vis/dist/vis.js"></script>
+        <script type="text/javascript" src="lib/vis.js"></script>
         <script type="text/javascript" src="js/state.js"></script>
         <script type="text/javascript" src="js/ajaxHelper.js"></script>
         <script type="text/javascript" src="js/tools.js"></script>
