Populate patient form.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -78,7 +78,7 @@
                 <h1>Add Patient</h1>
             </div>
             <div data-role="content">
-                <form id="edit-patient-form">
+                <form id="edit-patient-form" data-id="0">
                     <label for="urn">URN:</label>
                     <input type="text" name="urn">
                     <label for="name">Name:</label>
