--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -139,28 +139,27 @@
             </div>
             <div data-role="content">
                 <form id="edit-event-form">
-                    <label for="event-reaction">Reaction:</label>
-                    <select name="reaction" id="event-reaction">
-                        <option value="1">The 1st Option</option>
-                        <option value="2">The 2nd Option</option>
-                        <option value="3">The 3rd Option</option>
-                        <option value="4">The 4th Option</option>
-                    </select>
                     <label for="event-organ">Organ:</label>
                     <select name="organ" id="event-organ">
-                        <option value="1">The 1st Option</option>
-                        <option value="2">The 2nd Option</option>
-                        <option value="3">The 3rd Option</option>
-                        <option value="4">The 4th Option</option>
+                        <option value="1">Skin</option>
+                        <option value="2">GI Tract</option>
+                        <option value="3">Respiratory</option>
+                        <option value="4">CardioVascular</option>
+                    </select>
+                    <label for="event-reaction">Reaction:</label>
+                    <select name="reaction" id="event-reaction">
+                        <option value="1">Urticaria</option>
+                        <option value="2">Angioedema</option>
+                        <option value="3">Abdominal pain</option>
+                        <option value="4">Vomiting</option>
                     </select>
                     <label for="event-date">Date:</label>
                     <input type="text" data-role="date" id="event-date" name="event_date" data-inline="true">
                     <label for="event-severity">Severity:</label>
                     <select name="severity" id="event-severity">
-                        <option value="1">The 1st Option</option>
-                        <option value="2">The 2nd Option</option>
-                        <option value="3">The 3rd Option</option>
-                        <option value="4">The 4th Option</option>
+                        <option value="1">Mild</option>
+                        <option value="2">Moderate</option>
+                        <option value="3">Severe</option>
                     </select>
                     <input type="submit" value="Submit">
                 </form>
