Fixed the date field.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -144,7 +144,7 @@
                     <label for="event-reaction">Reaction:</label>
                     <select name="reaction" id="event-reaction"></select>
                     <label for="event-date">Date:</label>
-                    <input type="text" data-role="date" id="event-date" name="event_date" data-inline="true">
+                    <input type="datetime-local" data-role="date" id="event-date" name="event_date" data-inline="true">
                     <label for="event-severity">Severity:</label>
                     <select name="severity" id="event-severity"></select>
                     <input type="submit" value="Submit">
