Update event form with event data.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -128,7 +128,7 @@
             </div>
             <div data-role="content">
                 <div class="content-holder"></div>
-                <a href="#" class="ui-btn ui-corner-all">Edit Event</a>
+                <a href="#edit-event" class="ui-btn ui-corner-all">Edit Event</a>
             </div>
         </div>
 
