--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -44,6 +44,7 @@
 
         <script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
         <script type="text/javascript" src="lib/jquery.mobile-1.4.5.min.js"></script>
+        <script type="text/javascript" src="lib/moment.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="lib/vis.js"></script>
 
