Fixed send form.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -171,7 +171,7 @@
             </div>
             <div data-role="content">
                 <div class="content-holder"></div>
-                <a href="#" class="ui-btn ui-corner-all">Edit Medicine</a>
+                <a href="#edit-medicine" class="ui-btn ui-corner-all">Edit Medicine</a>
             </div>
         </div>
 
