--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -168,6 +168,7 @@
             <div data-role="header" data-position="fixed">
                 <a href="#medicines" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Medicine</h1>
+                <a class="ui-btn-right delete-btn" data-icon="delete" data-type="medicine">Delete</a>
             </div>
             <div data-role="content">
                 <div class="content-holder"></div>
