--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -96,6 +96,7 @@
             <div data-role="header" data-position="fixed">
                 <a href="#patients" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Patient</h1>
+                <a class="ui-btn-right delete-btn" data-icon="delete" data-type="patient">Delete</a>
                 <div data-role="navbar">
                     <ul>
                       <li><a href="#view-patient" class="ui-btn-active ui-state-persist">Patient</a></li>
@@ -126,6 +127,7 @@
             <div data-role="header" data-position="fixed">
                 <a href="#events" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Event</h1>
+                <a class="ui-btn-right delete-btn" data-icon="delete" data-type="event">Delete</a>
             </div>
             <div data-role="content">
                 <div class="content-holder"></div>
