--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -96,7 +96,6 @@
             <div data-role="header" data-position="fixed">
                 <a href="#patients" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Patient</h1>
-                <a class="ui-btn-right delete-btn" data-icon="delete" data-type="patient">Delete</a>
                 <div data-role="navbar">
                     <ul>
                       <li><a href="#view-patient" class="ui-btn-active ui-state-persist">Patient</a></li>
@@ -109,6 +108,11 @@
             <div data-role="content">
                 <div class="content-holder"></div>
                 <a href="#edit-patient" class="ui-btn ui-corner-all">Edit Patient</a>
+            </div>
+            <div data-role="footer" data-position="fixed">
+                <div class="ui-bar">
+                    <a class="footer-button-right delete-btn" data-icon="delete" data-type="patient">Delete</a>
+                </div>
             </div>
         </div>
 
@@ -127,11 +131,15 @@
             <div data-role="header" data-position="fixed">
                 <a href="#events" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Event</h1>
-                <a class="ui-btn-right delete-btn" data-icon="delete" data-type="event">Delete</a>
             </div>
             <div data-role="content">
                 <div class="content-holder"></div>
                 <a href="#edit-event" class="ui-btn ui-corner-all">Edit Event</a>
+            </div>
+            <div data-role="footer" data-position="fixed">
+                <div class="ui-bar">
+                    <a class="footer-button-right delete-btn" data-icon="delete" data-type="event">Delete</a>
+                </div>
             </div>
         </div>
 
@@ -170,11 +178,15 @@
             <div data-role="header" data-position="fixed">
                 <a href="#medicines" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>View Medicine</h1>
-                <a class="ui-btn-right delete-btn" data-icon="delete" data-type="medicine">Delete</a>
             </div>
             <div data-role="content">
                 <div class="content-holder"></div>
                 <a href="#edit-medicine" class="ui-btn ui-corner-all">Edit Medicine</a>
+            </div>
+            <div data-role="footer" data-position="fixed">
+                <div class="ui-bar">
+                    <a class="footer-button-right delete-btn" data-icon="delete" data-type="medicine">Delete</a>
+                </div>
             </div>
         </div>
 
