--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -29,9 +29,9 @@
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
         <meta http-equiv="Content-Security-Policy"
-              content="default-src 'self' data: gap: https://ssl.gstatic.com https://polar-reaches-96790.herokuapp.com/ http://192.168.56.1:3000/ 'unsafe-eval';
-                       script-src 'self' 'unsafe-inline' 'unsafe-eval';
-                       style-src 'self' 'unsafe-inline';
+              content="default-src 'self' data: gap: https://ssl.gstatic.com https://polar-reaches-96790.herokuapp.com/ http://192.168.56.1:3000/ https://www.gstatic.com/ 'unsafe-eval';
+                       script-src * 'self' 'unsafe-inline' 'unsafe-eval' ;
+                       style-src * 'self' 'unsafe-inline';
                        media-src *;
                        img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
@@ -46,7 +46,36 @@
         <script type="text/javascript" src="lib/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="lib/moment.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="lib/vis.js"></script>
+        <!-- <script type="text/javascript" src="lib/vis.js"></script> -->
+        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script type="text/javascript">
+            google.charts.load('current', {'packages':['timeline']});
+            google.charts.setOnLoadCallback(drawChart);
+            function drawChart() {
+              var container = document.getElementById('timeline');
+              var chart = new google.visualization.Timeline(container);
+              var dataTable = new google.visualization.DataTable();
+              var options = {
+                explorer: {
+                  axis: 'horizontal',
+                  keepInBounds: true
+                }
+              };
+
+              dataTable.addColumn({ type: 'string', id: 'President' });
+              dataTable.addColumn({ type: 'date', id: 'Start' });
+              dataTable.addColumn({ type: 'date', id: 'End' });
+              dataTable.addRows([
+                [ 'Washington', new Date(1789, 3, 30), new Date(1797, 2, 4) ],
+                [ 'Adams',      new Date(1797, 2, 4),  new Date(1801, 2, 4) ],
+                [ 'Jefferson',  new Date(1801, 2, 4),  new Date(1809, 2, 4) ],
+                [ 'Adams1',      new Date(1809, 2, 4),  new Date(1815, 2, 4) ],
+                [ 'Adams2',      new Date(1815, 2, 4),  new Date(1825, 2, 4) ]
+              ]);
+
+              chart.draw(dataTable);
+            }
+        </script>
 
         <script type="text/javascript" src="js/state.js"></script>
         <script type="text/javascript" src="js/ajaxHelper.js"></script>
@@ -218,7 +247,7 @@
                 <h1>Report</h1>
             </div>
             <div data-role="content">
-                <div class="content-holder"></div>
+                <div id="timeline" class="content-holder"></div>
             </div>
         </div>
     </body>
