--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -72,9 +72,6 @@
                     <ul data-role="listview" id="patient-list" data-inset="true" data-filter="true"></ul>
                 </div>
             </div>
-            <!-- <div id="timeline2-holder">
-            <div id="timeline2"></div>
-            </div> -->
             <div data-role="footer" data-position="fixed">
                 <h1>Copyright 2017</h1>
             </div>
@@ -221,9 +218,16 @@
                 <a href="#view-patient" class="ui-btn-left" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>Report</h1>
             </div>
-            <div class="timeline-holder" data-role="content">
+            <div class="timeline-holder">
                 <div class="timeline"></div>
             </div>
+            <div data-role="content">
+                <form>
+                    <label for="email">Email:</label>
+                    <input type="text" data-clear-btn="true" name="email" id="email" value="">
+                    <input type="submit" value="Send">
+                </form>
+          </div>
         </div>
     </body>
 </html>
