Adjust width by number of days.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -219,6 +219,7 @@
                 <h1>Report</h1>
             </div>
             <div class="timeline-holder">
+                <div>Timeline:</div>
                 <div class="timeline"></div>
             </div>
             <div data-role="content">
