Added sendEmail method.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -223,9 +223,10 @@
                 <div class="timeline"></div>
             </div>
             <div data-role="content">
-                <form>
+                <form id="send-email-form">
                     <label for="email">Email:</label>
                     <input type="text" data-clear-btn="true" name="email" id="email" value="">
+                    <input type="hidden" name="patient_id" value="">
                     <input type="submit" value="Send">
                 </form>
           </div>
