Clear the patient form.

--- a/medicinetracker/www/index.html
+++ b/medicinetracker/www/index.html
@@ -84,10 +84,10 @@
             </div>
             <div data-role="content">
                 <form id="edit-patient-form">
-                    <label for="urn">URN:</label>
-                    <input type="text" name="urn" required>
-                    <label for="name">Name:</label>
-                    <input type="text" name="name" required>
+                    <label for="patient-urn">URN:</label>
+                    <input type="text" name="urn" id="patient-urn" required>
+                    <label for="patient-name">Name:</label>
+                    <input type="text" name="name" id="patient-name" required>
                     <input type="submit" value="Submit">
                 </form>
             </div>
